--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "docusaurus start",
     "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
-    "dep:local": "yarn build && npx dz-ud /ld/esboot ./build/",
+    "dep:local": "yarn build && dz-ud /ld/esboot ./build http://esboot.dzfe.net",
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
