--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@easyops-cn/docusaurus-search-local": "^0.49.2",
     "@mdx-js/react": "^3.0.1",
     "clsx": "^2.1.1",
+    "lxgw-wenkai-screen-webfont": "^1.7.0",
     "prism-react-renderer": "^2.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
