--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@mdx-js/react": "^3.0.1",
     "clsx": "^2.1.1",
     "lxgw-wenkai-screen-webfont": "^1.7.0",
+    "medium-zoom": "^1.1.0",
     "prism-react-renderer": "^2.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
